nfc: update configuration from MIUI 9.0.5.0
Change-Id: I9f74b65d60b4fa3d9a23eeb8464a9bb0e1a14fb3

--- a/configs/nfc/libnfc-nxp.conf
+++ b/configs/nfc/libnfc-nxp.conf
@@ -5,20 +5,18 @@
 #      NFC configuration management file
 #
 #  Modification History:
-#      Revision 1.0  2017/01/04 20:50:20  xiaohua.wang@nxp.com
+#      Revision 1.0  2017/01/04 20:50:20  xiaohua.wang@xiaomi.com
 #      Initial draft version for Xiaomi C1 P2 board
 #
-#      Revision 1.1  2017/03/01 16:32:09  xiaohua.wang@nxp.com
+#      Revision 1.1  2017/03/01 16:32:09  xiaohua.wang@xiaomi.com
 #      Upgrade NFCC firmware version to 11.1.E
 #
 #      Revision 1.2  2017/06/30 23:45:41  xiaohua.wang@xiaomi.com
 #      Improved notification management of received NCI Mode Set
 #
-#      Revision 1.3 firmware version to 11.1.14
-#      kevin.hu@nxp.com 2017/09/05 15:50:41
 #=============================================================================
 
-# FW_VERSION=ALMSL 11.1.13/14
+# FW_VERSION=ALMSL 11.1.E
 # DEVICE_MANUFACTURER=Xiaomi
 # DEVICE_MODEL=C1,C2
 
@@ -161,10 +159,11 @@ NXP_RF_CONF_BLK_3={
 
 # CE detector/phase
 NXP_RF_CONF_BLK_4={
-     20, 02, 1C, 03,
-     A0, 38, 04, 05, 05, 05, 00,
+     20, 02, 22, 04,
+     A0, 38, 04, 04, 04, 00, 00,
      A0, 3A, 08, C8, 00, C8, 00, C8, 00, C8, 00,
-     A0, 0D, 06, 7A, 16, 8E, 00, 1F, 00
+     A0, 0D, 06, 7A, 16, 8E, 00, 1F, 00,
+     A0, 0D, 03, 00, 43, A0
 }
 
 ###############################################################################
